--- a/templates/base.html
+++ b/templates/base.html
@@ -66,6 +66,12 @@
 <script>
     $(document).ready(function () {
 
+         $(window).keydown(function(event){
+            if(event.keyCode === 13) {
+              event.preventDefault();
+              return false;
+            }
+  });
         $('.tagsinput').tagsinput({
             tagClass: 'label label-info'
         });
